--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@mdi/font": "^5.0.45",
+    "@types/lodash-es": "^4.17.3",
     "buefy": "^0.8.13",
     "core-js": "^3.6.4",
+    "lodash-es": "^4.17.15",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
