--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "yarn run build",
+    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -12,6 +14,7 @@
     "@types/lodash-es": "^4.17.3",
     "buefy": "^0.8.13",
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "lodash-es": "^4.17.15",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
